css: fixes and improvements (#403)
* css: remove unused class

Also absent in the language reference.

* fix: footer links invisible on mobile

This resulted in a broken sentence, since linkes were in the middle
of it. The no-mobile class is not used anywhere else on the website
nor the language reference.

* css: remove unnecessary class used only once in the website

* css: separate language menu from the bottom of the page

* css: move devlog-specific CSS outside global stylesheet

* css: prevent div from taking space when it has no contents

* fix: devlog entries are not aligned with page title

* css: separate headings from the previous section end a bit more

Makes the visual hierarchy slightly more clear.
In some cases a paragraph is too close to the following
heading, resulting in unclear separation between sections.

* css: improve devlog highlight boxes and posts separation

* css: remove unused classes

These are unused both in the website and in the language reference.
`.sgr` classes are used for terminal output.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,3 @@
-@media only screen and (max-width:600px) {
-  .no-mobile {
-    display: none;
-  }
-}
-
 html {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Liberation Sans, Helvetica Neue, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
 }
@@ -36,7 +30,7 @@ h1,
 h2,
 h3,
 h4 {
-  margin: 0.5em 0 0.5em;
+  margin: 0.8em 0 0.5em;
   line-height: 1.2;
   font-weight: bold;
   color: #666;
@@ -124,38 +118,11 @@ tr:nth-child(even)>td {
   background: #f2f3f3;
 }
 
-.parent-link {
-  margin-bottom: 1em !important;
-}
-
 .container {
   margin: 0 auto;
   position: relative;
   max-width: 1000px;
   padding: 0 0.2em;
-}
-
-
-.t0_1,
-.t37,
-.t37_1 {
-  font-weight: bold;
-}
-
-.t2_0 {
-  color: grey;
-}
-
-.t31_1 {
-  color: red;
-}
-
-.t32_1 {
-  color: green;
-}
-
-.t36_1 {
-  color: #0086b3;
 }
 
 .file {
@@ -176,11 +143,6 @@ samp {
   background: #f8f8f8;
   color: black;
   line-height: normal;
-}
-
-.tok {
-  color: #333;
-  font-style: normal;
 }
 
 .code {
@@ -345,32 +307,11 @@ h4:lang(ja) {
     background: #1e1e1e;
   }
 
-  .t2_0 {
-    color: grey;
-  }
-
-  .t31_1 {
-    color: red;
-  }
-
-  .t32_1 {
-    color: green;
-  }
-
-  .t36_1 {
-    color: #0086b3;
-  }
-
   pre>code,
   samp {
     background: #1e1e1e;
     color: #ccc;
     line-height: normal;
-  }
-
-  .tok {
-    color: #ccc;
-    font-style: normal;
   }
 
   .tok-kw {
@@ -532,9 +473,4 @@ video {
 #back {
   margin-top: 1em;
   display: inline-block;
-}
-
-
-.changelist>div {
-  padding: 5px 20px;
 }
